--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#map path{
+  fill: gainsboro;
+  stroke: white;
+  stroke-width: 1.5px;
+}
+
+
+#map path:hover{
+  fill: orange;
+}
